--- a/source/less/main.less
+++ b/source/less/main.less
@@ -184,7 +184,9 @@ label.flex-row {
 .width-150{
     width: 150px;
 }
-
+.width-auto {
+    width: auto;
+}
 .fix-btn-sm p{ 
     width: 108px;
     text-overflow: ellipsis;
