--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -471,3 +471,10 @@ input[type="checkbox"] {
     font-weight: bold;
     letter-spacing: -0.5;
 }
+.conditionExpr {
+	margin-top: 1em;
+	& > textarea {
+		resize: none;
+		min-width: 100%;
+	}
+}
