--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -476,6 +476,8 @@ input[type="checkbox"] {
 	& > textarea {
 		resize: none;
 		min-width: 100%;
+	}
+}
 .modalTernary {
 	thead tr th {
 		text-align: center;		
