--- a/source/less/main.less
+++ b/source/less/main.less
@@ -410,3 +410,9 @@ input[type].display-none, .display-none {
     text-overflow: ellipsis;
     overflow: hidden;
 }
+.color-black {
+    color: black;
+}
+.color-lightgray {
+    color: #ccc;
+}
