--- a/source/components/wi-multiselect/wi-multiselect.less
+++ b/source/components/wi-multiselect/wi-multiselect.less
@@ -1,9 +1,14 @@
 multiselect {
     display:block;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
 multiselect .btn {
     width: 100%;
     background-color: #FFF;
+    .caret {
+        margin-top: 0.5em;
+    }
 }
 multiselect .btn.error{
     border: 1px solid #da4f49 !important;
