--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -382,7 +382,18 @@ table.shadingTable td {
 }
 .regressionLineTable tbody tr td {
 	padding: 6px 2px;
-	text-align: center;
+	text-align: center; 
+}
+.selectPolygons {
+	// border: 1px solid #ccc;
+	border-radius: 5px;
+	div>button {
+		font-size: 12px;
+		padding: 1px 8px;
+	}
+	div>ul>li>a>i {
+		margin-right: 1.5em;
+	}
 }
 .refCurveTable {
 	thead tr th {
