--- a/source/app/components/wi-d3-crossplot/wi-d3-crossplot.html
+++ b/source/app/components/wi-d3-crossplot/wi-d3-crossplot.html
@@ -8,15 +8,41 @@
     <!-- <h4>Crossplot: {{wiD3Crossplot.crossplotModel.properties.name}}</h4>
     <h5>Reference: [{{wiD3Crossplot.wellProperties.topDepth}} - {{wiD3Crossplot.wellProperties.bottomDepth}}]</h5> -->
     <div class='crossplot-container'>
-      <div style='padding-left:2em;'>{{wiD3Crossplot.crossplotModel.properties.plotType}}</div>
-      <div wi-right-click='wiD3Crossplot.showContextMenu($event)' id='{{wiD3Crossplot.crossplotAreaId}}' wi-element-ready='wiD3Crossplot.onReady()'
-        class='d3-crossplot-region' style="flex:1"></div>
-      <div style='padding-bottom:0.5em;' class='text-center'>{{wiD3Crossplot.crossplotModel.properties.xLabel}}</div>
+        <!--<div style='padding-left:2em;'>{{wiD3Crossplot.crossplotModel.properties.plotType}}</div>-->
+        <div wi-right-click='wiD3Crossplot.showContextMenu($event)' id='{{wiD3Crossplot.crossplotAreaId}}' style="display:flex;flex-direction:column;position:relative;flex:1">
+            <div class="vi-crossplot-header-container">
+                <div class='vi-crossplot-header-row vi-crossplot-header-name'></div>
+                <div class='vi-crossplot-header-row vi-crossplot-header-reference'></div>
+            </div>
+            <div style="display:flex;flex-direction:column;flex:1;">
+                <div ng-if="wiD3Crossplot.crossplotModel.properties.showHistogram" 
+                    style="flex-basis: 25%;display: flex;flex-direction:row;">
+                    <div style='flex-basis: 20%'></div>
+                    <div id="{{wiD3Crossplot.name + 'HistogramX'}}" style='flex:1;'
+                        wi-element-ready="wiD3Crossplot.histogramXReady();">
+                    </div>
+                </div>
+                <div style='flex: 1; display:flex;flex-direction:row;'>
+                    <div ng-if="wiD3Crossplot.crossplotModel.properties.showHistogram" 
+                        style='flex-basis:20%;position:relative;' 
+                        id="{{wiD3Crossplot.name + 'HistogramY'}}"
+                        wi-element-ready="wiD3Crossplot.histogramYReady();">
+                        <div class='transform-group'></div>
+                    </div>
+                    <div ng-dblclick="wiD3Crossplot.propertiesDialog();" style='flex:1' class='vi-crossplot-container' 
+                        wi-element-ready='wiD3Crossplot.onReady()'>
+                    </div>
+                </div>
+            </div>
+            <div class='vi-crossplot-footer-container'>
+            </div>
+        </div>
     </div>
   </div>
   <div resizable r-directions="['left']" r-flex="true" ng-show="wiD3Crossplot.crossplotModel.properties.referenceDisplay" style="min-width:20%;max-width:30%">
-    <wi-container 
-      name='RefCrossplotContainer' title='Reference Curve' close-handler='wiD3Crossplot.CloseReferenceWindowZz'>
+    <wi-container name='RefCrossplotContainer' 
+        title='Reference Curve' 
+        close-handler='wiD3Crossplot.CloseReferenceWindow'>
       <wi-reference-window
         name='{{wiD3Crossplot.getWiRefWindCtrlName()}}'
         on-ref-wind-ctrl-ready="wiD3Crossplot.onRefWindCtrlReady">
