--- a/source/app/components/wi-d3-crossplot/wi-d3-crossplot.less
+++ b/source/app/components/wi-d3-crossplot/wi-d3-crossplot.less
@@ -67,4 +67,14 @@ wi-d3-crossplot {
     .wi-small{
         font-size: 85%;
     }
+    .transform-group {
+        position: absolute;
+        bottom: 0px;
+        left: 0;
+        transform-origin: left bottom;
+        transform: rotate(-90deg) translateY(100%);
+        &.vi-histogram-container {
+            padding:10px 20px 20px 50px;
+        }
+    }
 }
