--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -16,10 +16,10 @@ img {
 	font-style: normal !important;
 }
 
-.form-control{
-	height: 30px;
-	padding: 4px 12px;
-}
+// .form-control{
+// 	height: 30px;
+// 	padding: 4px 12px;
+// }
 
 // .modal-w800{
 // 	width: 800px;
