histogram plot curve

--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -156,6 +156,11 @@
             stroke: maroon;
             stroke-width: 2px;
         }
+        .curves {
+            fill: none;
+            stroke: purple;
+            stroke-width: 2px;
+        }
     }
     .vi-histogram-tooltip {
         border: 1px solid blue;
