add custom sacle to log-track

--- a/source/less/main.less
+++ b/source/less/main.less
@@ -192,7 +192,7 @@ label.flex-row {
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
-    vertical-align: -webkit-baseline-middle;
+    vertical-align: text-bottom;
     text-indent: 5px;
     text-align: left;
 }
