curve average update dialog

--- a/source/less/main.less
+++ b/source/less/main.less
@@ -354,7 +354,9 @@ input[type].display-none, .display-none {
 .padding-top-0 {
     padding-top: 0px !important;
 }
-
+.padding-0_3-em {
+    padding: 0.3em;
+}
 .padding-left-5-percent {
     padding-left: 5%;
 }
