--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -497,3 +497,10 @@ input[type="checkbox"] {
 		text-align: center;
 	}
 }
+
+////
+.wi-select-control {
+	border: none;
+	float: right;
+	background: none;
+}
