--- a/source/components/wi-custom-input/wi-custom-input.less
+++ b/source/components/wi-custom-input/wi-custom-input.less
@@ -3,7 +3,7 @@ wi-custom-input {
     //     width: 100%;
     // }
     input[type=number] {
-        padding-right: 16px;
+        padding-right: 25px;
     }
     input[type=number]::-webkit-inner-spin-button, 
     input[type=number]::-webkit-outer-spin-button { 
@@ -13,13 +13,30 @@ wi-custom-input {
         margin: 0; 
     }
     .custom-input-menu {
-        padding: 1em;
+        width: 100%;
+        max-height: 200px;
+        overflow-y: auto;
     }
     .custom-item {
         display: flex;
+        padding: 5px 10px;
         &:hover {
-            background-color: #ccc;
+            border: 1px solid #b3b6ba;
+            border-radius:2px;
+            background: rgba(214,226,253,1);
+            background: -moz-linear-gradient(top, rgba(214,226,253,1) 0%, rgba(233,236,247,1) 100%);
+            background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(214,226,253,1)), color-stop(100%, rgba(233,236,247,1)));
+            background: -webkit-linear-gradient(top, rgba(214,226,253,1) 0%, rgba(233,236,247,1) 100%);
+            background: -o-linear-gradient(top, rgba(214,226,253,1) 0%, rgba(233,236,247,1) 100%);
+            background: -ms-linear-gradient(top, rgba(214,226,253,1) 0%, rgba(233,236,247,1) 100%);
+            background: linear-gradient(to bottom, rgba(214,226,253,1) 0%, rgba(233,236,247,1) 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d6e2fd', endColorstr='#e9ecf7', GradientType=0 ); 
+            box-shadow: inset 0px 1px 5px 0px rgba(0,0,0,0.15);
         }
+    }
+    .custom-item-selected {
+        background: steelblue;
+        color: white;
     }
     .custom-value {
         display: flex;
@@ -31,12 +48,17 @@ wi-custom-input {
         flex: 1;
         opacity: 0.5;
     }
-    .caret {
-        margin-right: 5px;
-        margin-top: 6px;
-        position: absolute;
-        top: 3px;
-        right: 3px;
-        cursor: pointer;
-    }
+   .custom-btn {
+       position: absolute;
+       top: 0px;
+       right: 0px;
+       height: 23px;
+       width: 23px;
+       padding: 2px;
+       border: 1px solid transparent;
+       background: transparent;
+       &:hover {
+           background-color: #ccc;
+       }
+   }
 }
