Show data points in area for reference window

--- a/source/app/components/wi-reference-window/wi-reference-window.less
+++ b/source/app/components/wi-reference-window/wi-reference-window.less
@@ -23,5 +23,8 @@ wi-reference-window {
             position: absolute;
             overflow: visible;
         }
+        canvas.point-canvas {
+            position: absolute;
+        }
     }
 }
