--- a/source/components/wi-custom-input/wi-custom-input.html
+++ b/source/components/wi-custom-input/wi-custom-input.html
@@ -1,7 +1,7 @@
 <div class="dropdown"  uib-dropdown>
-    <input type="number" ng-if="wiCustomInput.type == 'number'" ng-model="wiCustomInput.model" class="form-control wi-form-control">
-    <input type="text" ng-if="wiCustomInput.type == 'curve'" ng-model="wiCustomInput.model.name" class="form-control wi-form-control"
-    ng-change="wiCustomInput.onChanged()">
+    <input type="number" ng-if="wiCustomInput.type == 'number'" ng-model="wiCustomInput.model" class="form-control wi-form-control" required>
+    <input type="text" ng-if="wiCustomInput.type == 'curve'" ng-model="wiCustomInput.model.curveName" class="form-control wi-form-control"
+    ng-change="wiCustomInput.onChanged()" required>
     <button uib-dropdown-toggle id="dropdownMenu" class="custom-btn">
         <i class="ti-angle-down"></i>
     </button>
@@ -12,7 +12,7 @@
             <span class="custom-label">{{opt.label}}</span>
         </li>
         <li ng-if="wiCustomInput.type == 'curve'" ng-repeat="opt in wiCustomInput.options" ng-click="wiCustomInput.onClickCurve(opt)" class="custom-item"
-        ng-class="{'custom-item-selected': opt.properties.name==wiCustomInput.model.name}">
+        ng-class="{'custom-item-selected': opt.properties.name==wiCustomInput.model.curveName && opt.idDataset==wiCustomInput.model.idDataset}">
             <span class="custom-value">{{opt.properties.name}}</span>
             <span class="custom-label">{{opt.datasetName}}</span>
         </li>
