--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -510,5 +510,10 @@ input[type="checkbox"] {
 		text-align: center;
 		padding: 0.3em;
 	}
-
+	background: #F2F2F2;
+}
+input[type=checkbox].input-check {
+	margin-top: 60%;
+	width: 15px;
+	height: 15px;
 }
