update icon for symbol select

--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -231,6 +231,9 @@ form h5:after {
 .valign-middle {
 	vertical-align: middle;
 }
+.valign-bottom {
+	vertical-align: bottom;
+}
 .color-error {
 	color: red;
 }
