--- a/source/less/main.less
+++ b/source/less/main.less
@@ -294,6 +294,9 @@ input[type].display-none, .display-none {
 .margin-bottom-1_5em {
     margin-bottom: 1.5em;
 }
+.margin-bottom-0_3em {
+    margin-bottom: 0.3em;
+}
 .margin-tb-5px {
     margin: 5px 0;
 }
