--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -457,9 +457,9 @@ table.shadingTable td {
 	vertical-align: middle;
 	text-align: center;
 }
-.modalShadingAttr label{
-	text-align: right;
-}
+//.modalShadingAttr label{
+//	text-align: right;
+//}
 
 input[type="checkbox"] {
 	vertical-align: top;
