update curve-convolution, fix button in processingtab

--- a/source/components/wi-button/wi-button.less
+++ b/source/components/wi-button/wi-button.less
@@ -6,9 +6,9 @@ wi-button, wi-toolbar-button {
             display: inline-block;
             background: none;
             border: 1px solid transparent;
-            & > img {
-                margin:auto;
-            }
+            // & > img {
+            //     margin:auto;
+            // }
             & > p {
                 font-size: 12px;
             }            
