--- a/source/less/main.less
+++ b/source/less/main.less
@@ -206,8 +206,9 @@ wi-dropdown.fix-btn-sm{
     border: none;
 }
 
-wi-dropdown.fix-btn-sm span{
-    text-indent: 5px;
+wi-dropdown.fix-btn-sm p{
+    width: 100px;
+    margin-left: 3px;
 }
 
 .border-right-btn{
