--- a/source/components/wi-dropdown/wi-dropdown.html
+++ b/source/components/wi-dropdown/wi-dropdown.html
@@ -4,12 +4,12 @@
             ng-click="wiDropdown.onClick()"
             ng-disabled='wiDropdown.isDisabled()'>
         <span ng-if="wiDropdown.icon" class="{{wiDropdown.icon || wiDropdown.config.icon || wiDropdown.default.icon}}"></span>
-        <div class="label-wrapper {{wiDropdown.layout || wiDropdown.config.layout || wiDropdown.default.layout}}">
-            <span class="{{wiDropdown.layout || wiDropdown.config.layout || wiDropdown.default.layout}}"
+        <!-- <div class="label-wrapper {{wiDropdown.layout || wiDropdown.config.layout || wiDropdown.default.layout}}"> -->
+            <p class="{{wiDropdown.layout || wiDropdown.config.layout || wiDropdown.default.layout}}"
                   ng-show="wiDropdown.label || wiDropdown.config.label">
-                {{wiDropdown.label || wiDropdown.config.label}}</span>
+                {{wiDropdown.label || wiDropdown.config.label}}</p>
             <span class="caret"></span>
-        </div>
+        <!-- </div> -->
     </button>
     <ul class="dropdown-menu">
         <div ng-transclude></div>
