--- a/source/components/wi-dropdown/wi-dropdown.less
+++ b/source/components/wi-dropdown/wi-dropdown.less
@@ -1,5 +1,5 @@
 wi-dropdown {
-  border-left: 1px solid transparent;
+  // border-left: 1px solid transparent;
   -moz-border-image: -moz-linear-gradient(to bottom, rgba(180,182,191,0) 0%, rgba(180,182,191,1) 51%, rgba(180,182,191,0) 100%);
   -webkit-border-image: -webkit-linear-gradient(to bottom, rgba(180,182,191,0) 0%, rgba(180,182,191,1) 51%, rgba(180,182,191,0) 100%);
   border-image: linear-gradient(to bottom, rgba(180,182,191,0) 0%, rgba(180,182,191,1) 51%, rgba(180,182,191,0) 100%);
@@ -58,7 +58,6 @@ wi-dropdown {
   }
 
   .dropdown-menu {
-    /*min-width: 0;*/
     padding: 0;
     min-width:170px;
   }
@@ -72,12 +71,12 @@ wi-dropdown {
     display: block;
   }
 
-  .dropdown-normal {
-    padding: 5px;
-  }
+  // .dropdown-normal {
+  //   padding: 5px;
+  // }
 
-  .dropdown-small {
-    padding: 5px;
-  }
+  // .dropdown-small {
+  //   padding: 5px;
+  // }
 }
 
