update curve comparison

--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -467,7 +467,7 @@ table.shadingTable td {
 //}
 
 input[type="checkbox"] {
-	vertical-align: top;
+	vertical-align: sub;
     margin-right: 5px;
 }
 
