--- a/source/less/main.less
+++ b/source/less/main.less
@@ -424,3 +424,14 @@ input[type].display-none, .display-none {
 .color-lightgray {
     color: #ccc;
 }
+
+.white-backdrop {
+    opacity: 1;
+    background-color: rgb(255, 255, 255);
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1040;
+}
