fix syntax in wi-list.html

--- a/source/app/components/wi-properties/wi-properties.html
+++ b/source/app/components/wi-properties/wi-properties.html
@@ -1,3 +1,3 @@
-<wi-list name="{{config.name}}" heading="{{config.heading}}" items="config.data""
+<wi-list name="{{config.name}}" heading="{{config.heading}}" items="config.data"
          ng-repeat="config in wiProperties.listConfig">
 </wi-list>
