fix crossplot format dialog

--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -533,3 +533,11 @@ input[type=checkbox].input-check {
 	border-radius: 5px;
 	border: 1px solid #333;
 }
+
+#spinner-holder {
+	position: absolute;
+	border: 1px solid pink;
+	top: 0; left:0; right:0; bottom:0;
+	background-color: rgba(255,255,255,0.5);
+	z-index: 10;
+}
