small ui-select input

--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -533,3 +533,11 @@ input[type=checkbox].input-check {
 	border-radius: 5px;
 	border: 1px solid #333;
 }
+
+.ui-select-match .ui-select-toggle {
+	height: 24px;
+	padding: 2px 8px;
+}
+.ui-select-search {
+	height: 24px;
+}
