css crossplot format

--- a/source/less/main.less
+++ b/source/less/main.less
@@ -223,7 +223,9 @@ wi-dropdown.fix-btn-sm p{
 .font-weight-700 {
     font-weight: 700;
 }
-
+.font-weight-normal {
+    font-weight: normal;
+};
 .ui-widget.ui-widget-content{
     background: #282828;
     color: #fff;
@@ -292,6 +294,9 @@ input[type].display-none, .display-none {
 .margin-bottom-0 {
     margin-bottom: 0;
 }
+.margin-bottom-1em {
+    margin-bottom: 1em;
+}
 .margin-bottom-1_5em {
     margin-bottom: 1.5em;
 }
@@ -318,6 +323,9 @@ input[type].display-none, .display-none {
 }
 .padding-bottom-1em {
     padding-bottom: 1em;
+}
+.padding-bottom-0_5em {
+    padding-bottom: 0.5em;
 }
 .padding-tb-2em {
     padding: 2em 0;
@@ -360,6 +368,9 @@ input[type].display-none, .display-none {
 }
 .padding-0_3-em {
     padding: 0.3em;
+}
+.padding-left-4-percent {
+    padding-left: 4%;
 }
 .padding-left-5-percent {
     padding-left: 5%;
@@ -423,4 +434,12 @@ input[type].display-none, .display-none {
 }
 .color-lightgray {
     color: #ccc;
+}
+.top-4px {
+    top: 4px;
+}
+.border-style {
+    border-right: 1px solid transparent;
+    border-image: linear-gradient(to bottom, rgba(180, 182, 191, 0) 0%, #b4b6bf 51%, rgba(180, 182, 191, 0) 100%);
+    border-image-slice: 1;
 }
