--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -548,3 +548,11 @@ input[type=checkbox].input-check {
 	background-color: rgba(255,255,255,0.5);
 	z-index: 10;
 }
+
+.label-disabled {
+	opacity: 0.65;
+	box-shadow: none;
+	pointer-events: none;
+	background-color: #fff;
+	border-color: #ccc;
+}
