add well_insight icon and regenerate icon set

--- a/source/less/sprite_32.less
+++ b/source/less/sprite_32.less
@@ -41,11 +41,11 @@
 .text-boundary-32x32, .text-field-properties-32x32, .tool-tips-32x32, .tools-normal-32x32, .track-delete-32x32, 
 .track-duplicate-32x32, .true-vertical-depth-32x32, .user-define-32x32, .user-formula-32x32, .user-formula-multiline-32x32, 
 .visual-remove-32x32, .water-saturation-32x32, .well-depth-convertion-32x32, .well-32x32, .well-delete-32x32, 
-.well-depth-32x32, .well-header-edit-32x32, .well-header-save-32x32, .well-load-32x32, .well-marker-add-32x32, 
-.well-new-32x32, .well-parameter-save-32x32, .wells-32x32, .workflow-32x32, .zonation-track-add-32x32, 
-.zone-add-plus-32x32, .zone-delete-32x32, .zone-edit-32x32, .zone-properties-32x32, .zone-split-32x32, 
-.zone-table-32x32, .zoom-default-32x32, .zoom-in-32x32, .zoom-out-32x32, .block-value-32x32, 
-.block-value-v-32x32
+.well-depth-32x32, .well-header-edit-32x32, .well-header-save-32x32, .well-insight-32x32, .well-load-32x32, 
+.well-marker-add-32x32, .well-new-32x32, .well-parameter-save-32x32, .wells-32x32, .workflow-32x32, 
+.zonation-track-add-32x32, .zone-add-plus-32x32, .zone-delete-32x32, .zone-edit-32x32, .zone-properties-32x32, 
+.zone-split-32x32, .zone-table-32x32, .zoom-default-32x32, .zoom-in-32x32, .zoom-out-32x32, 
+.block-value-32x32, .block-value-v-32x32
 { display: inline-block; background: url('../img/img_32x32.png') no-repeat; overflow: hidden; text-indent: -9999px; text-align: left; }
  
 .neural-network-32x32 { background-position: -0px -0px; width: 32px; height: 32px; }
@@ -256,21 +256,22 @@
 .well-depth-32x32 { background-position: -0px -6560px; width: 32px; height: 32px; }
 .well-header-edit-32x32 { background-position: -0px -6592px; width: 32px; height: 32px; }
 .well-header-save-32x32 { background-position: -0px -6624px; width: 32px; height: 32px; }
-.well-load-32x32 { background-position: -0px -6656px; width: 32px; height: 32px; }
-.well-marker-add-32x32 { background-position: -0px -6688px; width: 32px; height: 32px; }
-.well-new-32x32 { background-position: -0px -6720px; width: 32px; height: 32px; }
-.well-parameter-save-32x32 { background-position: -0px -6752px; width: 32px; height: 32px; }
-.wells-32x32 { background-position: -0px -6784px; width: 32px; height: 32px; }
-.workflow-32x32 { background-position: -0px -6816px; width: 32px; height: 32px; }
-.zonation-track-add-32x32 { background-position: -0px -6848px; width: 32px; height: 32px; }
-.zone-add-plus-32x32 { background-position: -0px -6880px; width: 32px; height: 32px; }
-.zone-delete-32x32 { background-position: -0px -6912px; width: 32px; height: 32px; }
-.zone-edit-32x32 { background-position: -0px -6944px; width: 32px; height: 32px; }
-.zone-properties-32x32 { background-position: -0px -6976px; width: 32px; height: 32px; }
-.zone-split-32x32 { background-position: -0px -7008px; width: 32px; height: 32px; }
-.zone-table-32x32 { background-position: -0px -7040px; width: 32px; height: 32px; }
-.zoom-default-32x32 { background-position: -0px -7072px; width: 32px; height: 32px; }
-.zoom-in-32x32 { background-position: -0px -7104px; width: 32px; height: 32px; }
-.zoom-out-32x32 { background-position: -0px -7136px; width: 32px; height: 32px; }
-.block-value-32x32 { background-position: -0px -7168px; width: 24px; height: 24px; }
-.block-value-v-32x32 { background-position: -0px -7192px; width: 24px; height: 24px; }
+.well-insight-32x32 { background-position: -0px -6656px; width: 32px; height: 32px; }
+.well-load-32x32 { background-position: -0px -6688px; width: 32px; height: 32px; }
+.well-marker-add-32x32 { background-position: -0px -6720px; width: 32px; height: 32px; }
+.well-new-32x32 { background-position: -0px -6752px; width: 32px; height: 32px; }
+.well-parameter-save-32x32 { background-position: -0px -6784px; width: 32px; height: 32px; }
+.wells-32x32 { background-position: -0px -6816px; width: 32px; height: 32px; }
+.workflow-32x32 { background-position: -0px -6848px; width: 32px; height: 32px; }
+.zonation-track-add-32x32 { background-position: -0px -6880px; width: 32px; height: 32px; }
+.zone-add-plus-32x32 { background-position: -0px -6912px; width: 32px; height: 32px; }
+.zone-delete-32x32 { background-position: -0px -6944px; width: 32px; height: 32px; }
+.zone-edit-32x32 { background-position: -0px -6976px; width: 32px; height: 32px; }
+.zone-properties-32x32 { background-position: -0px -7008px; width: 32px; height: 32px; }
+.zone-split-32x32 { background-position: -0px -7040px; width: 32px; height: 32px; }
+.zone-table-32x32 { background-position: -0px -7072px; width: 32px; height: 32px; }
+.zoom-default-32x32 { background-position: -0px -7104px; width: 32px; height: 32px; }
+.zoom-in-32x32 { background-position: -0px -7136px; width: 32px; height: 32px; }
+.zoom-out-32x32 { background-position: -0px -7168px; width: 32px; height: 32px; }
+.block-value-32x32 { background-position: -0px -7200px; width: 24px; height: 24px; }
+.block-value-v-32x32 { background-position: -0px -7224px; width: 24px; height: 24px; }
