--- a/source/less/sprite_16.less
+++ b/source/less/sprite_16.less
@@ -47,10 +47,10 @@
 .track-duplicate-16x16, .tracks-blank-3-16x16, .tracks-blank-4-16x16, .true-vertical-depth-16x16, .unlock-16x16, 
 .user-define-16x16, .user-formula-16x16, .user-formula-multiline-16x16, .visual-remove-16x16, .water-saturation-16x16, 
 .well-16x16, .well-delete-16x16, .well-depth-16x16, .well-depth-convertion-16x16, .well-header-edit-16x16, 
-.well-load-16x16, .well-marker-add-16x16, .well-new-16x16, .wells-16x16, .workflow-16x16, 
-.zonation-track-add-16x16, .zone-add-plus-16x16, .zone-corellation, .zone-delete-16x16, .zone-edit-16x16, 
-.zone-properties-16x16, .zone-split-16x16, .zone-table-16x16, .zoom-default-16x16, .zoom-in-16x16, 
-.zoom-out-16x16
+.well-insight-16x16, .well-load-16x16, .well-marker-add-16x16, .well-new-16x16, .wells-16x16, 
+.workflow-16x16, .zonation-track-add-16x16, .zone-add-plus-16x16, .zone-corellation, .zone-delete-16x16, 
+.zone-edit-16x16, .zone-properties-16x16, .zone-split-16x16, .zone-table-16x16, .zoom-default-16x16, 
+.zoom-in-16x16, .zoom-out-16x16
 { display: inline-block; background: url('../img/img_16x16.png') no-repeat; overflow: hidden; text-indent: -9999px; text-align: left; }
  
 .neural-network-16x16 { background-position: -0px -0px; width: 16px; height: 16px; }
@@ -288,19 +288,20 @@
 .well-depth-16x16 { background-position: -112px -240px; width: 16px; height: 16px; }
 .well-depth-convertion-16x16 { background-position: -128px -240px; width: 16px; height: 16px; }
 .well-header-edit-16x16 { background-position: -144px -240px; width: 16px; height: 16px; }
-.well-load-16x16 { background-position: -160px -240px; width: 16px; height: 16px; }
-.well-marker-add-16x16 { background-position: -176px -240px; width: 16px; height: 16px; }
-.well-new-16x16 { background-position: -192px -240px; width: 16px; height: 16px; }
-.wells-16x16 { background-position: -208px -240px; width: 16px; height: 16px; }
-.workflow-16x16 { background-position: -224px -240px; width: 16px; height: 16px; }
-.zonation-track-add-16x16 { background-position: -0px -256px; width: 16px; height: 16px; }
-.zone-add-plus-16x16 { background-position: -16px -256px; width: 16px; height: 16px; }
-.zone-corellation { background-position: -32px -256px; width: 16px; height: 16px; }
-.zone-delete-16x16 { background-position: -48px -256px; width: 16px; height: 16px; }
-.zone-edit-16x16 { background-position: -64px -256px; width: 16px; height: 16px; }
-.zone-properties-16x16 { background-position: -80px -256px; width: 16px; height: 16px; }
-.zone-split-16x16 { background-position: -96px -256px; width: 16px; height: 16px; }
-.zone-table-16x16 { background-position: -112px -256px; width: 16px; height: 16px; }
-.zoom-default-16x16 { background-position: -128px -256px; width: 16px; height: 16px; }
-.zoom-in-16x16 { background-position: -144px -256px; width: 16px; height: 16px; }
-.zoom-out-16x16 { background-position: -160px -256px; width: 16px; height: 16px; }
+.well-insight-16x16 { background-position: -160px -240px; width: 16px; height: 16px; }
+.well-load-16x16 { background-position: -176px -240px; width: 16px; height: 16px; }
+.well-marker-add-16x16 { background-position: -192px -240px; width: 16px; height: 16px; }
+.well-new-16x16 { background-position: -208px -240px; width: 16px; height: 16px; }
+.wells-16x16 { background-position: -224px -240px; width: 16px; height: 16px; }
+.workflow-16x16 { background-position: -0px -256px; width: 16px; height: 16px; }
+.zonation-track-add-16x16 { background-position: -16px -256px; width: 16px; height: 16px; }
+.zone-add-plus-16x16 { background-position: -32px -256px; width: 16px; height: 16px; }
+.zone-corellation { background-position: -48px -256px; width: 16px; height: 16px; }
+.zone-delete-16x16 { background-position: -64px -256px; width: 16px; height: 16px; }
+.zone-edit-16x16 { background-position: -80px -256px; width: 16px; height: 16px; }
+.zone-properties-16x16 { background-position: -96px -256px; width: 16px; height: 16px; }
+.zone-split-16x16 { background-position: -112px -256px; width: 16px; height: 16px; }
+.zone-table-16x16 { background-position: -128px -256px; width: 16px; height: 16px; }
+.zoom-default-16x16 { background-position: -144px -256px; width: 16px; height: 16px; }
+.zoom-in-16x16 { background-position: -160px -256px; width: 16px; height: 16px; }
+.zoom-out-16x16 { background-position: -176px -256px; width: 16px; height: 16px; }
