--- a/source/less/main.less
+++ b/source/less/main.less
@@ -291,6 +291,9 @@ input[type].display-none, .display-none {
 .margin-left-0_5em {
     margin-left: 0.5em;
 }
+.margin-left-1em {
+    margin-left: 1em;
+}
 .margin-bottom-0 {
     margin-bottom: 0;
 }
@@ -435,8 +438,8 @@ input[type].display-none, .display-none {
 .color-lightgray {
     color: #ccc;
 }
-.top-4px {
-    top: 4px;
+.top-8px {
+    top: 8px;
 }
 .border-style {
     border-right: 1px solid transparent;
