--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -556,3 +556,17 @@ input[type=checkbox].input-check {
 	background-color: #fff;
 	border-color: #ccc;
 }
+.refCurve {
+	thead tr th {
+		padding: 2px 8px;
+		text-align: center;
+	}
+	tbody tr td {
+		padding: 4px 8px 1px;
+		.checkbox {
+			padding-top: 3px;
+			padding-bottom: 3px;
+		}
+	}
+
+}
