--- a/source/less/main.less
+++ b/source/less/main.less
@@ -322,6 +322,9 @@ input[type].display-none, .display-none {
 .padding-bottom-2em {
 	padding-bottom: 2em;
 }
+.padding-bottom-0_5em {
+    padding-bottom: 0.5em;
+}
 .padding-bottom-1em {
     padding-bottom: 1em;
 }
@@ -369,6 +372,9 @@ input[type].display-none, .display-none {
 }
 .padding-left-5-percent {
     padding-left: 5%;
+}
+.padding-left-4-percent {
+    padding-left: 4%;
 }
 .padding-left-10-percent {
     padding-left: 10%;
@@ -438,4 +444,7 @@ input[type].display-none, .display-none {
     border-right: 1px solid transparent;
     border-image: linear-gradient(to bottom, rgba(180, 182, 191, 0) 0%, #b4b6bf 51%, rgba(180, 182, 191, 0) 100%);
     border-image-slice: 1;
+}
+.font-weight-normal {
+    font-weight: normal;
 }
