--- a/source/components/wi-treeview/wi-treeview.html
+++ b/source/components/wi-treeview/wi-treeview.html
@@ -20,7 +20,7 @@
                 ng-dblclick="wiTreeview.onDoubleClick($index)">
                 <div class="display-inline-block margin-right-0_5em"><span class="{{item.data.icon}}"></span></div>
                 <span>{{item.data.label}}</span>
-                <span ng-if="wiTreeview.isShowParentName && item.data.parent">/ {{item.data.parent.name}}</span>
+                <span ng-if="wiTreeview.isShowParentName && item.parentData">/ {{item.parentData.label}}</span>
             </div>
         </div>
 
