--- a/source/less/main.less
+++ b/source/less/main.less
@@ -4,16 +4,26 @@ input, button, textarea, select{
 		outline: none;
 	}
 }
-
+::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background: #eee;
+    box-shadow: 0 0 1px 1px #bbb, inset 0 0 7px rgba(0,0,0,0.3)
+  }
 ::-webkit-scrollbar {
-    width: 6px;
-    background-color: rgba(0, 0, 0, 0.1);
+    height: 10px;
+    width: 10px;
+	background-color: #F5F5F5;
     border-radius: 10px;
 }
+// ::-webkit-scrollbar-thumb {
+//     background-color: rgba(0, 0, 0, 0.3);
+//     border-radius: 10px;
+// }
 ::-webkit-scrollbar-thumb {
-    background-color: rgba(0, 0, 0, 0.3);
     border-radius: 10px;
-}
+    background: linear-gradient(left, #96A6BF, #63738C);
+    box-shadow: inset 0 0 1px 1px #5C6670;
+  }
 
 body{
     background: url(../img/bg_index.png) repeat;
