--- a/source/components/wi-treeview/wi-treeview.html
+++ b/source/components/wi-treeview/wi-treeview.html
@@ -5,7 +5,7 @@
     <div class="wi-parent-node" type="{{wiTreeview.config[$index].type}}"
         ng-class='{"item-active": item.data.selected}'
         data="{{wiTreeview.config[$index].id}}"
-        wi-right-click="wiTreeview.onClick($index, $event); wiTreeview.showContextMenu($event, $index)"
+        wi-right-click="wiTreeview.onClick($index, $event, item); wiTreeview.showContextMenu($event, $index)"
         wi-element-ready="wiTreeview.onReady()">
         <div class="wi-parent-content">
             <div class="icon-expanded"
@@ -16,7 +16,7 @@
             'fa-caret-right': !item.data.childExpanded,
             'wi-hidden': item.children == null || item.children.length == 0}"></i>
             </div>
-            <div ng-click="wiTreeview.onClick($index, $event)"
+            <div ng-click="wiTreeview.onClick($index, $event, item)"
                 ng-dblclick="wiTreeview.onDoubleClick($index)">
                 <div class="display-inline-block margin-right-0_5em"><span class="{{item.data.icon}}"></span></div>
                 <span>{{item.data.label}}</span>
@@ -25,14 +25,14 @@
         </div>
 
         <div class="wi-parent-unit" ng-show="item.data.unit"
-            ng-click="wiTreeview.onClick($index, $event)"
+            ng-click="wiTreeview.onClick($index, $event, item)"
             ng-dblclick="wiTreeview.onDoubleClick($index)">
             <span class='display-inline-block' style='text-indent:10px;'>{{item.data.unit}}</span>
         </div>
     </div>
 
     <div ng-show="item.data.childExpanded">
-        <wi-treeview contextmenuholder={{wiTreeview.contextmenuholder}}
-            config="item.children" container="wiTreeview.container" is-show-parent-name="item.data.isCollection"></wi-treeview>
+        <wi-treeview config="item.children" container="wiTreeview.container"
+            is-show-parent-name="item.data.isCollection" on-click="wiTreeview.onClick"></wi-treeview>
     </div>
 </div>
