add open last project

--- a/source/app/components/wi-explorer/template/wi-explorer.html
+++ b/source/app/components/wi-explorer/template/wi-explorer.html
@@ -10,5 +10,7 @@
 </div>
 <div style='padding-left: 10px; background-color:#fff; overflow-y: scroll; height: calc(100% - 94px);'
 id="treeContent">
-    <wi-treeview contextmenuholder="{{wiExplorer.name}}" name="{{wiExplorer.treeviewName}}" config="wiExplorer.treeConfig" container="wiExplorer"></wi-treeview>
+    <wi-explorer-treeview contextmenuholder="{{wiExplorer.name}}" name="{{wiExplorer.treeviewName}}" config="wiExplorer.treeConfig" container="wiExplorer"></wi-explorer-treeview>
+    <!-- <wi-treeview is-root="true" name="wiExplorer.treeviewName" config="wiExplorer.treeConfig" container="wiExplorer"></wi-treeview> -->
+    <!-- <wi-treeview contextmenuholder="{{wiExplorer.name}}" name="{{wiExplorer.treeviewName}}" config="wiExplorer.treeConfig" container="wiExplorer"></wi-treeview> -->
 </div>
