--- a/source/app/components/wi-explorer/wi-explorer-test.html
+++ b/source/app/components/wi-explorer/wi-explorer-test.html
@@ -19,7 +19,7 @@
 
     <script src="js/main-explorer.js.bundle.js"></script>
 
-    <title>Test</title>
+    <title>Test explorer</title>
 </head>
 
 <body ng-app='helloapp'>
