--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -602,3 +602,28 @@ input[type=checkbox].input-check {
 		}
 	}
 }
+// import from inventory dialog 
+#inventory-modal .modal-body {
+	height: 75%;
+	padding: 5px;
+}
+
+#left-inventory {
+	border: 1px solid #e5e5e5;
+	border-radius: 5px;
+	height: 100%;
+}
+
+#center-inventory {
+	position: sticky;
+	top: 50%;
+	transform: translateY(-50%);
+	text-align: center;
+}
+
+#right-inventory {
+	border: 1px solid #e5e5e5;
+	border-radius: 5px;
+	height:100%;
+}
+//end import from inventory inentory dialog 
